--- a/views/home.pug
+++ b/views/home.pug
@@ -6,6 +6,7 @@ block content
         each video in videos 
             <!--mixin함수 호출 및 함수내부 변수 정의-->
             +videoBlock({
+                id:video.id,
                 videoFile: video.videoFile,
                 title:video.title,
                 views:video.views
